--- a/templates _old/index.html
+++ b/templates _old/index.html
@@ -23,7 +23,7 @@
 		<div class="am-container">
 			<div class="am-image"> <img src="css/logo-scalo.jpg"> </div>
 			<div class="am-text"> | vacancy priority </div>
-			<div class="am-text-small"> &emsp; &emsp; &emsp; <a href="/clientatr"> <b>change client atrributes -> </b></a> </div>
+			<div class="am-text-small"> &emsp; &emsp; &emsp; <a href="/clientattr.html"> <b>change client atrributes -> </b></a> </div>
 		</div>
 		
 		
